--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
   <header class="bg-secondary text-white">
     <div class="container text-center">
-      <h1>Habitat Properties Over Time</h1>
-      <p class="lead">by Myri Ayala and Emma Wellins</p>
-      <p class="lead">Last updated on Dec 2, 2021</p>
+      <h1>Hartford-Area Habitat for Humanity homes built in North Central Connecticut</h1>
+      <p class="lead">by Emma Willins and Myrian Ayala</p>
+      <p class="lead">Last updated on 12/04/2021</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
@@ -63,72 +63,83 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Story</h2>
-          <p class="lead">TELL AND SHOW your story and data visualizations here. Notice how this HTML "lead" class tag enlarges and draws attention to this paragraph, compared to other paragraphs without this tag.</p>
+          <h2>Story</h2><br>
+          <p>Since 1989, <a href="https://hartfordhabitat.org/"> Hartford-Area Habitat for Humanity </a> has been building affordable homes in the city of Hartford and outlying areas. One challenge the organization continually faces is finding land they can purchase and obtain permission to build affordable homes, since some suburban towns have resisted housing for low-income residents.Therefore, we wanted to answer the following question: Where has Habitat built homes in North Central Connecticut over time?. In order to do so, we were required to collect and visualize data illustrating the year that each of the 249 homes that were built as well as placing them in the context of Habitat’s expansion within and surrounding Hartford and outlying towns over time. Through collaboration with our Habitat for Humanity partners, they have shared their goal of expanding their reach beyond Hartford, providing their services outside of Connecticut’s capital.</p>
+          <p>Keeping Habitat’s goal in mind, we have made two charts that provide both a summary that speaks more directly to Habitat’s expansion in North Central Connecticut over the decade as well as Habitat’s data organized by location and corresponding decade of construction.</p>
+          <p>The following column bar chart examines the percentages of where Habitat built homes by decade. Although we can observe that this chart demonstrates that the majority of Habitat homes built reside in Hartford, we can also see that the percentage of Habitat homes in outlying towns has slowly increased over time.</p>
 
-          <p>Start new paragraphs between p tags. Include links when appropriate, such as the <a href="https://handsondataviz.org">Hands-On DataViz</a> book.</p>
+          <iframe title="Over each decade, Habitat for Humanity has built an increasing percentage of its homes in outlying areas outside of the city of Hartford " aria-label="Stacked Column Chart" id="datawrapper-chart-1NvfH" src="https://datawrapper.dwcdn.net/1NvfH/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+  </script>
 
-          <p>Compose your data story in your Google Doc, because it's easier to write and edit, especially when working with other people. When you're ready, go to this <a href="https://github.com/DataVizForAll/dataviz-story-template">GitHub dataviz-story-template repo</a> to create your own template, and publish it online using Settings > Pages.</a>
+          <p>Figure 1: Hartford-Area Habitat for humanity percentage of homes built by decade. Stacked column chart created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/1NvfH/6/">interactive version</a></p>
 
-          <p>One advantage of this template is that you can quickly make and view edits on your local computer. Go to your GitHub repo and select Code > Download Zip, uncompress the folder, and install a free code editor tool such as <a href="https://atom.io">Atom Editor</a>, and open the "index.html" file to make edits directly on your local computer. View your edits by opening "index.html" with any browser, which is faster than waiting for GitHub Pages to update your online version every time you make a small change. After making several edits on your local computer, carefully delete the old "index.html" file in your online GitHub repo, and replace it with the updated "index.html" file from your local computer.</p>
+          <p>If you are interested, below you can find a table that provides the total numbers of homes built by Hartford-Area Habitat for Humanity for each decade which was used to create the percentage stacked column bar chart. </p>
 
-          <p>When describing charts, maps, or tables that appear further below, refer to them "...as shown in Figure 1" or "...as shown in Table 1" and include those figure/table numbers in the titles or captions below.</p>
+          <center><style type="text/css">
+  .tg  {border-collapse:collapse;border-spacing:0;}
+  .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+    overflow:hidden;padding:10px 5px;word-break:normal;}
+  .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+    font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+  .tg .tg-1wig{font-weight:bold;text-align:left;vertical-align:top}
+  .tg .tg-lqy6{text-align:right;vertical-align:top}
+  .tg .tg-akbm{font-weight:bold;text-align:left;text-decoration:underline;vertical-align:top}
+  </style>
+  <table class="tg">
+  <thead>
+    <tr>
+      <th class="tg-akbm">Location</th>
+      <th class="tg-1wig">Pre-2000</th>
+      <th class="tg-1wig">2000-2009</th>
+      <th class="tg-1wig">2010-present</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="tg-1wig">Hartford city</td>
+      <td class="tg-lqy6">27</td>
+      <td class="tg-lqy6">90</td>
+      <td class="tg-lqy6">61</td>
+    </tr>
+    <tr>
+      <td class="tg-1wig">Outlying areas</td>
+      <td class="tg-lqy6">3</td>
+      <td class="tg-lqy6">35</td>
+      <td class="tg-lqy6">33</td>
+    </tr>
+    <tr>
+      <td class="tg-akbm">Total</td>
+      <td class="tg-lqy6">30</td>
+      <td class="tg-lqy6">125</td>
+      <td class="tg-lqy6">94</td>
+    </tr>
+  </tbody>
+  </table>
 
-          <p>Embed each published visualization as an HTML iframe code, following instructions in HODV chapter 9, similar to the sample below.</p>
+<br>
+          <p>Table 1: Numbers of homes built by Hartford-Area Habitat for Humanity per decade. <a href="https://docs.google.com/spreadsheets/d/1afE8CD_XAwPYus-3bXJnoTGshckebVCjOiqI0lGFbt0/edit?usp=sharing" > See data source </a></p>
 
-          <iframe title="Habitat for Humanity Homes in Hartford and Outlying Towns, CT, by Decade - Excluding Town of Hartford" aria-label="Stacked Bars" id="datawrapper-chart-n6EUX" src="https://datawrapper.dwcdn.net/n6EUX/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="596"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</center>
+<p>Now, to see where exactly Hartford-Area Habitat for Humanity has built homes in outlying towns outside of Hartford, we decided to create a bar chart which visually illustrates the proportion of Habitat homes among all other towns. Here the distinctions between outlying towns become clearer. New Britain stands out as the town that Habitat has done the most work in, which makes sense, given New Britain’s geographic proximity to Hartford. Additionally, New Britain has the largest population out of all the towns Habitat provided data for, excluding Hartford. It is reasonable that Habitat would pursue construction in larger towns given their work in more-population-dense areas such as Hartford.
+</p>
+<iframe title="Hartford-Area Habitat for Humanity homes in outlying areas outside of the city, CT by decade  " aria-label="Stacked Bars" id="datawrapper-chart-HBvRG" src="https://datawrapper.dwcdn.net/HBvRG/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="358"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
-
-          <p>Figure 1: Explore the <a href="https://datawrapper.dwcdn.net/fdcm0/">interactive chart</a> AND ADD your description of the chart here. Make sure your caption includes a direct link to your published chart or map in case the embed code fails to display.</p>
-
-          <p>If you need to create a table, use the <a href="https://www.tablesgenerator.com/html_tables">Tables Generator HTML tool</a>. Go to File > Import or manually enter your table data, then Generate the HTML code, and paste it here, similar to the sample below. </p>
-
-          <style type="text/css">
-          .tg  {border-collapse:collapse;border-spacing:0;}
-          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-          .tg .tg-lqy6{text-align:right;vertical-align:top}
-          .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
-          .tg .tg-dvpl{border-color:inherit;text-align:right;vertical-align:top}
-          </style>
-          <table class="tg">
-          <thead>
-            <tr>
-              <th class="tg-0pky">Header A</th>
-              <th class="tg-0pky">Header B</th>
-              <th class="tg-0pky">Header C</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="tg-dvpl">123</td>
-              <td class="tg-dvpl">456</td>
-              <td class="tg-dvpl">789</td>
-            </tr>
-            <tr>
-              <td class="tg-lqy6">987</td>
-              <td class="tg-lqy6">654</td>
-              <td class="tg-lqy6">321</td>
-            </tr>
-          </tbody>
-          </table>
-
-          <p>Table 1: Add your caption here.</p>
-
-          <h4>Optional Subheaders: Use H4 tags to break up long sections</h4>
-
-          <p>All of your data visualizations should be interactive. But if you need to insert a static image, you can upload a JPG or PNG to the GitHub repo, and insert it using the HTML img tag as shown below.</p>
-
-          <img src="sample-image.jpg" style="width: 100%; margin: 30px 0">
-
-          <p>Figure 2: Describe your image in a caption, and always credit the source if someone else created it.</p>
-
+<p>Figure 2: Numbers of homes built by Hartford-Area Habitat for Humanity in outlying areas outside Hartford's city per decade. Stacked bar chart created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/HBvRG/6/" > interactive version </a></p>
+<p>To have a better understanding of where the homes built by Hartford-Area Habitat for Humanity are located, we decided to create an interactive choropleth map for each decade that displays the name and the estimated number of homes built in each town. We decided to use a continuous linear color legend where the dark blue represents the greater amount of homes built while the lighter color refers to a lower number of homes built. For instance, in this case, the dark blue represents the city of Hartford since most of the total homes built by decade resides in Connecticut’s capital and the lighter colors are the outlying areas outside of the city where Habitat has built. We created our own geojson map template that combines Hartford and Tolland counties where most of the towns are located. However, only a huge part of the maps are not colored, which means that Hartford-Area Habitat for Humanity has not built any home yet and is represented by the color gray.
+</p>
         </div>
       </div>
     </div>
   </section>
+
+<p> <p style="text-align:left"> <iframe title="Pre-2000" aria-label="Map" id="datawrapper-chart-VAYal" src="https://datawrapper.dwcdn.net/VAYal/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 30% !important; border: none;" height="572"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+</script> <iframe title="2000-2009" aria-label="Map" id="datawrapper-chart-FT6S7" src="https://datawrapper.dwcdn.net/FT6S7/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 30% ; !important; border: none;" height="572"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+</script><iframe title=" 2010-present. " aria-label="Map" id="datawrapper-chart-0GdrN" src="https://datawrapper.dwcdn.net/0GdrN/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 30% !important; border: none;" height="572"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script></p>
+
+
 
   <!-- Data section-->
   <section id="data" class="bg-light">
@@ -136,7 +147,24 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Data</h2>
-          <p>Describe how you obtained your data and identify key steps so that readers can understand your methods and reproduce them in the future. Write in HTML format and include links when appropriate.</p>
+          <p>
+To find the 'year built' and/or  'year sold' for the given homes, we searched into the town governments property records database provided by Professor Dougherty, and students Emma Wellins and Myrian Ayala which can be found below. </p>
+<p><a href="https://www.mytaxbill.org/inet/bill/home.do?town=bloomfield"> Hartford Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=bloomfield">Bloomfield Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=bristol">Bristol Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=easthartford">East Hartford Assessor Database</a><br>
+<a href="http://gis.vgsi.com/enfieldct/Search.aspx">Enfield Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=farmington">Farmington Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=glastonbury">lastonbury Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=granby">Granby CT Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=manchester">Manchester CT Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=manchester">New Britain Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=plainville">Plainville Assessor Database</a><br>
+<a href="https://www.suffieldct.gov/departments/tax">Suffield Assessor Database</a><br>
+<a href="https://www.vernon-ct.gov/departments-services/property-cards-and-gis-information">Vernon Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=windsor">Windsor Assessor Database</a><br>
+</p>
+<p> We searched by property location, which allowed us to introduce the address number and the address street name. Then selected the right location and downloaded the pdf that provides the year built/sold. </p>
         </div>
       </div>
     </div>
@@ -148,10 +176,11 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Credits</h2>
-          <p>GIVE CREDIT to people, organizations, resources, and tools that helped you to create this data story. Write in HTML format and include links when appropriate. If you wish to cite a reading, use any acceptable bibiography style and include a web link when available, similar to this sample:</p>
-
-          <p> Rebecca Lurye, “New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs,” Hartford Courant, May 31, 2019, https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html.</p>
-
+          <p>Professor Dougherty collaborated to find the property records for each town located in North Central Connecticut and cleaned up the database along with Hartford-Area Habitat for Humanity to get a more accurate visualization. </p>
+<p>Nassar Abdelrahman and Nola McKenna who helped search the years of homes built/sold for the 249 data. </p>
+<p> Hands on DataVisualization book written by Professor Dourgherty and Independent Technologist Ilya Ilyankou: <a href="https://handsondataviz.org/"> https://HandsOnDataViz.org </a></p>
+<P> Datawrapper open-source tool to create interactive charts </p>
+<p> MIKE SWIFT Courant, Staff Writer. "Housing for Needy may be Built at Former Poor Farm in Simsbury." The Hartford Courant (1923-), Jun 03, 1989. <a href="https://www.proquest.com/docview/1638179800?accountid=14405"> http://ezproxy.trincoll.edu/login?url=https://www.proquest.com/historical-newspapers/housing-needy-may-be-built-at-former-poor-farm/docview/1638179800/se-2?accountid=14405 </a> </p>
         </div>
       </div>
     </div>
