--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <header class="bg-secondary text-white">
     <div class="container text-center">
-      <h1>Hartford-Area Habitat for Humanity homes built in North Central Connecticut</h1>
+      <h1>Hartford-Area Habitat for Humanity has expanded construction over time</h1>
       <p class="lead">by Emma Wellins and Myrian Ayala</p>
       <p class="lead">Last updated on 12/06/2021</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
@@ -64,7 +64,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Story</h2><br>
-          <p>Since 1989, <a href="https://hartfordhabitat.org/"> Hartford-Area Habitat for Humanity </a> has been building affordable homes in the city of Hartford and outlying areas. One challenge the organization continually faces is finding land they can purchase and obtain permission to build affordable homes, since some suburban towns have resisted housing for low-income residents.Therefore, we wanted to answer the following question: Where has Habitat built homes in North Central Connecticut over time?. In order to do so, we were required to collect and visualize data illustrating the year that each of the 249 homes that were built as well as placing them in the context of Habitat’s expansion within and surrounding Hartford and outlying towns over time. Through collaboration with our Habitat for Humanity partners, they have shared their goal of expanding their reach beyond Hartford, providing their services outside of Connecticut’s capital.</p>
+          <p>Since 1989, <a href="https://hartfordhabitat.org/"> Hartford-Area Habitat for Humanity </a> has been building affordable homes in the city of Hartford and outlying areas. One challenge the organization continually faces is finding land they can purchase and obtain permission to build affordable homes, since some suburban towns have resisted housing for low-income residents. Therefore, we wanted to investigate where Hartford-Area Habitat for Humanity has built homes in  North Central Connecticut over time. In order to do this, we were required to collect and visualize data illustrating the build year of the 249 homes that Habitat provided to us in a spreadsheet. From there, we could place these homes in the context of Habitat’s expansion within Hartford as well as outlying towns across a three-decade time span. Through collaboration with our Habitat for Humanity partners, they shared their goal of expanding their reach beyond the city of Hartford, and our data collection and visuaizations present the extent at which they have.</p>
           <p>Keeping Habitat’s goal in mind, we have made two charts that provide both a summary that speaks more directly to Habitat’s expansion in North Central Connecticut over the decade as well as Habitat’s data organized by location and corresponding decade of construction.</p>
           <p>The following column bar chart examines the percentages of where Habitat built homes by decade. Although we can observe that this chart demonstrates that the majority of Habitat homes built reside in Hartford, we can also see that the percentage of Habitat homes in outlying towns has slowly increased over time.</p>
 
