--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           <iframe title="Over each decade, Habitat for Humanity has built an increasing percentage of its homes in outlying areas outside of the city of Hartford " aria-label="Stacked Column Chart" id="datawrapper-chart-1NvfH" src="https://datawrapper.dwcdn.net/1NvfH/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
   </script>
 
-          <p>Figure 1: Hartford-Area Habitat for humanity percentage of homes built by decade. Stacked column chart created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/1NvfH/6/">interactive version</a></p>
+          <p>Figure 1: This chart displays Hartford-Area Habitat for Humanity percentage of homes built by decade in Hartford and outlying towns. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/1NvfH/6/">interactive version</a>.</p>
 
-          <p>If you are interested, below you can find a table that provides the total numbers of homes built by Hartford-Area Habitat for Humanity for each decade which was used to create the percentage stacked column bar chart. </p>
+          <p>Below, you may see the total numbers of homes built by Hartford-Area Habitat for Humanity for each decade which were used to create the chart above. </p>
 
           <center><style type="text/css">
   .tg  {border-collapse:collapse;border-spacing:0;}
@@ -117,15 +117,15 @@
   </table>
 
 <br>
-          <p>Table 1: Numbers of homes built by Hartford-Area Habitat for Humanity per decade. <a href="https://docs.google.com/spreadsheets/d/1afE8CD_XAwPYus-3bXJnoTGshckebVCjOiqI0lGFbt0/edit?usp=sharing" > See data source </a></p>
+          <p>Table 1: Numbers of homes built by Hartford-Area Habitat for Humanity in Hartofrd and outlying towns by decade. <a href="https://docs.google.com/spreadsheets/d/1afE8CD_XAwPYus-3bXJnoTGshckebVCjOiqI0lGFbt0/edit?usp=sharing" > See data source </a></p>
 
 </center>
-<p>Now, to see where exactly Hartford-Area Habitat for Humanity has built homes in outlying towns outside of Hartford, we decided to create a bar chart which visually illustrates the proportion of Habitat homes among all other towns. Here the distinctions between outlying towns become clearer. New Britain stands out as the town that Habitat has done the most work in, which makes sense, given New Britain’s geographic proximity to Hartford. Additionally, New Britain has the largest population out of all the towns Habitat provided data for, excluding Hartford. It is reasonable that Habitat would pursue construction in larger towns given their work in more-population-dense areas such as Hartford.
+<p>The majority of the data provided by our Habitat parners are of addresses in Hartford--178 out of 249 total addresses--so in order to represent the addresses that lie outside of Hartford, we created a bar chart that provides the number of Habitat homes built in each town by decade, illustrated with colors that correspond to the decade in which they were built. With this visualization, the distinctions between outlying towns become clearer. New Britain stands out as the town that Habitat has done the most work in other than Hartford, which is reasonable given New Britain’s geographic proximity to Hartford. Additionally, New Britain has the largest population of all outlying towns. It is reasonable that Habitat would pursue construction in larger towns given their tendency to work in more population-dense areas such as Hartford.
 </p>
 <iframe title="Hartford-Area Habitat for Humanity homes in outlying areas outside of the city, CT by decade  " aria-label="Stacked Bars" id="datawrapper-chart-HBvRG" src="https://datawrapper.dwcdn.net/HBvRG/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="358"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
-<p>Figure 2: Numbers of homes built by Hartford-Area Habitat for Humanity in outlying areas outside Hartford's city per decade. Stacked bar chart created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/HBvRG/6/" > interactive version </a></p>
-<p>To have a better understanding of where the homes built by Hartford-Area Habitat for Humanity are located, we decided to create an interactive choropleth map for each decade that displays the name and the estimated number of homes built in each town. We decided to use a continuous linear color legend where the dark blue represents the greater amount of homes built while the lighter color refers to a lower number of homes built. For instance, in this case, the dark blue represents the city of Hartford since most of the total homes built by decade resides in Connecticut’s capital and the lighter colors are the outlying areas outside of the city where Habitat has built. We created our own geojson map template that combines Hartford and Tolland counties where most of the towns are located. However, only a huge part of the maps are not colored, which means that Hartford-Area Habitat for Humanity has not built any home yet and is represented by the color gray.
+<p>Figure 2: Numbers of homes built by Hartford-Area Habitat for Humanity in outlying areas by decade. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/HBvRG/6/" > interactive version </a>.</p>
+<p>To have a better understanding of where these 249 Habitat homes are located, we decided to create an interactive choropleth map for each decade. Each map displays the name and the estimated number of homes built in each town. The dark blue represents greater amounts of homes built in a designated town, while the lighter shades represent the presence of fewer Habitat homes in a given town. For example, the dark blue represents the city of Hartford since the largest number of homes in each decade are found in Connecticut’s capital. Towns that appear in gray indicate where Hartford-Area Habitat for Humanity has not built any homes in that location.
 </p>
         </div>
       </div>
@@ -155,16 +155,16 @@ To find the 'year built' and/or  'year sold' for the given homes, we searched in
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=easthartford">East Hartford Assessor Database</a><br>
 <a href="http://gis.vgsi.com/enfieldct/Search.aspx">Enfield Assessor Database</a><br>
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=farmington">Farmington Assessor Database</a><br>
-<a href="https://www.mytaxbill.org/inet/bill/home.do?town=glastonbury">lastonbury Assessor Database</a><br>
-<a href="https://www.mytaxbill.org/inet/bill/home.do?town=granby">Granby CT Assessor Database</a><br>
-<a href="https://www.mytaxbill.org/inet/bill/home.do?town=manchester">Manchester CT Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=glastonbury">Glastonbury Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=granby">Granby Assessor Database</a><br>
+<a href="https://www.mytaxbill.org/inet/bill/home.do?town=manchester">Manchester Assessor Database</a><br>
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=manchester">New Britain Assessor Database</a><br>
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=plainville">Plainville Assessor Database</a><br>
 <a href="https://www.suffieldct.gov/departments/tax">Suffield Assessor Database</a><br>
 <a href="https://www.vernon-ct.gov/departments-services/property-cards-and-gis-information">Vernon Assessor Database</a><br>
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=windsor">Windsor Assessor Database</a><br>
 </p>
-<p> We searched by property location, which allowed us to introduce the address number and the address street name. Then selected the right location and downloaded the pdf that provides the year built/sold. </p>
+<p> Within each area's assessor database, we searched by house number and street, then viewed PDF's of the provided property records to identify the year built or sold by Habitat.</p>
         </div>
       </div>
     </div>
@@ -177,9 +177,9 @@ To find the 'year built' and/or  'year sold' for the given homes, we searched in
         <div class="col-lg-8 mx-auto">
           <h2>Credits</h2>
           <p>Professor Dougherty collaborated to find the property records for each town located in North Central Connecticut and cleaned up the database along with Hartford-Area Habitat for Humanity to get a more accurate visualization. </p>
-<p>Nassar Abdelrahman and Nola McKenna who helped search the years of homes built/sold for the 249 data. </p>
+<p>Classmates Nassar Abdelrahman and Nolan McKenna both contributed to the search for the years of the 249 addresses that were provided by Hartford-Area Habitat for Humanity. </p>
 <p> Hands on DataVisualization book written by Professor Dourgherty and Independent Technologist Ilya Ilyankou: <a href="https://handsondataviz.org/"> https://HandsOnDataViz.org </a></p>
-<P> Datawrapper open-source tool to create interactive charts </p>
+<P> Datawrapper, an open-source tool used to create interactive charts.</p>
 <p> MIKE SWIFT Courant, Staff Writer. "Housing for Needy may be Built at Former Poor Farm in Simsbury." The Hartford Courant (1923-), Jun 03, 1989. <a href="https://www.proquest.com/docview/1638179800?accountid=14405"> http://ezproxy.trincoll.edu/login?url=https://www.proquest.com/historical-newspapers/housing-needy-may-be-built-at-former-poor-farm/docview/1638179800/se-2?accountid=14405 </a> </p>
         </div>
       </div>
