--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <iframe title="Over each decade, Habitat for Humanity has built an increasing percentage of its homes in outlying areas outside of the city of Hartford " aria-label="Stacked Column Chart" id="datawrapper-chart-1NvfH" src="https://datawrapper.dwcdn.net/1NvfH/8/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
   </script>
 
-          <p>Figure 1: This chart displays Hartford-Area Habitat for Humanity percentage of homes built by decade in Hartford and outlying towns. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/1NvfH/6/">interactive version</a>.</p>
+          <p>Figure 1: This chart displays Hartford-Area Habitat for Humanity percentage of homes built by decade in Hartford and outlying towns. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/1NvfH/6/">interactive version</a></p>
 
           <p>Below, you may see the total numbers of homes built by Hartford-Area Habitat for Humanity for each decade which were used to create the chart above. </p>
 
@@ -124,7 +124,7 @@
 </p>
 <iframe title="Hartford-Area Habitat for Humanity homes in outlying areas outside of the city, CT by decade  " aria-label="Stacked Bars" id="datawrapper-chart-HBvRG" src="https://datawrapper.dwcdn.net/HBvRG/5/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="358"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
-<p>Figure 2: Numbers of homes built by Hartford-Area Habitat for Humanity in outlying areas by decade. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/HBvRG/6/" > interactive version </a>.</p>
+<p>Figure 2: Numbers of homes built by Hartford-Area Habitat for Humanity in outlying areas by decade. This chart was created with Datawrapper. Explore the <a href="https://datawrapper.dwcdn.net/HBvRG/6/" > interactive version </a></p>
 <p>To have a better understanding of where these 249 Habitat homes are located, we decided to create an interactive choropleth map for each decade. Each map displays the name and the estimated number of homes built in each town. The dark blue represents greater amounts of homes built in a designated town, while the lighter shades represent the presence of fewer Habitat homes in a given town. For example, the dark blue represents the city of Hartford since the largest number of homes in each decade are found in Connecticut’s capital. Towns that appear in gray indicate where Hartford-Area Habitat for Humanity has not built any homes in that location.
 </p>
         </div>
@@ -148,7 +148,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>Data</h2>
           <p>
-To find the 'year built' and/or  'year sold' for the given homes, we searched into the town governments property records database provided by Professor Dougherty, and students Emma Wellins and Myrian Ayala which can be found below. </p>
+To find the 'year built' and/or 'year sold' for the given homes, students Emma Wellins and Myrian Ayala searched the town government's property record databases and Jack Dougherty double-checked our data for accuracy. During the data collection process, there were several addresses whose build years could not be easily identified using the assessor databases found below. Through communication with our Habitat partners as well as more in-depth research, we attempted to identify the build years of as many challenging addresses as possible in order to have the most accurate and complete set of data to visualize.</p>
 <p><a href="https://www.mytaxbill.org/inet/bill/home.do?town=bloomfield"> Hartford Assessor Database</a><br>
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=bloomfield">Bloomfield Assessor Database</a><br>
 <a href="https://www.mytaxbill.org/inet/bill/home.do?town=bristol">Bristol Assessor Database</a><br>
