--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@ To find the 'year built' and/or 'year sold' for the given homes, students Emma W
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2>Credits</h2>
-          <p>Professor Dougherty collaborated to find the property records for each town located in North Central Connecticut and cleaned up the database along with Hartford-Area Habitat for Humanity to get a more accurate visualization. </p>
-<p>Classmates Nassar Abdelrahman and Nolan McKenna both contributed to the search for the years of the 249 addresses that were provided by Hartford-Area Habitat for Humanity. </p>
+          <p>Myrian Ayala and Emma Wellins, along with help from classmates Nassar Abdelrahman and Nolan McKenna, shared a spreadsheet that contained each of the 249 Habitat addresses and evenly split the search for year built/sold dates, and Jack Dougherty supervised and double-checked their data collection for accuracy.</p>
 <p> Hands on DataVisualization book written by Professor Dourgherty and Independent Technologist Ilya Ilyankou: <a href="https://handsondataviz.org/"> https://HandsOnDataViz.org </a></p>
 <P> Datawrapper, an open-source tool used to create interactive charts.</p>
 <p> MIKE SWIFT Courant, Staff Writer. "Housing for Needy may be Built at Former Poor Farm in Simsbury." The Hartford Courant (1923-), Jun 03, 1989. <a href="https://www.proquest.com/docview/1638179800?accountid=14405"> http://ezproxy.trincoll.edu/login?url=https://www.proquest.com/historical-newspapers/housing-needy-may-be-built-at-former-poor-farm/docview/1638179800/se-2?accountid=14405 </a> </p>
