--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <header class="bg-secondary text-white">
     <div class="container text-center">
       <h1>Hartford-Area Habitat for Humanity has Expanded Construction Outside Hartford Over Time</h1>
-      <p class="lead">by Emma Wellins and Myrian Ayala</p>
+      <p class="lead">by Myrian Ayala and Emma Wellins</p>
       <p class="lead">Last updated on 12/06/2021</p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
